# mazelprotocol

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  TEST_COVERAGE.md  package.json  switchboardRandomness.md  switchboardRandomnessTutorial.md  tsconfig.json
app/: .cta.json  BLOCKCHAIN_INTEGRATION.md  THEME.md  env.example  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
app/public/: manifest.json
app/src/: env.ts  routeTree.gen.ts  router.tsx  styles.css
app/src/components/: CountdownTimer.tsx  Footer.tsx  Header.tsx  JackpotDisplay.tsx  LotteryBalls.tsx  RealJackpotDisplay.tsx  SyndicateChat.tsx  ThemeToggle.tsx
app/src/hooks/: useChat.ts
bot/: .dev.vars.example  env.example  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
bot/scripts/: set-telegram-webhook.js
bot/src/: config.ts  draw-executor.ts  env.ts  indexer.ts  logger.ts  telegram.ts  worker.ts
docs/: ADVANCED_FEATURES.md  CONSTANTS_GUIDE.md  INDEX.md  Lotto Game Parameters.txt  QUICK_START.md  SOLANA_LOTTO.md  TECHNICAL_SPEC.md  WHITEPAPER.md
migrations/: deploy.ts  verify.ts
programs/mazelprotocol/: Cargo.toml
programs/quickpick/: Cargo.toml
programs/quickpick/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/quickpick/src/instructions/: admin.rs  buy_ticket.rs  claim_prize.rs  commit_randomness.rs  execute_draw.rs  finalize_draw.rs  initialize.rs  mod.rs
tests/: mazelprotocol.ts  quickpick.ts  solana-lotto.test.ts
(+65 files in other folders)
