[package]
name = "quickpick"
version = "0.1.0"
description = "Quick Pick Express - High-frequency 5/35 lottery on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quickpick"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
switchboard-on-demand = "0.11.3"
sha2 = "0.10.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
